Fixed center alignment

--- a/bakcss.css
+++ b/bakcss.css
@@ -82,6 +82,7 @@ body, html {
     .col-10 {width: 83.33%;}
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
+    .omoss {display: flex; align-items: center;}
 }
 
 h1 {
